change styling a little bit

--- a/src/App.css
+++ b/src/App.css
@@ -3,30 +3,18 @@
 }
 
 body {
-  background-color: #34495e;
-  color: #fff;
+  background-color: #34495e!important;
+  color: #fff!important;
   font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 80vh;
   margin: 0;
-  overflow: hidden;
 }
 
 h1 {
   margin: 20px 0 0;
 }
 
-.game-container {
-  padding: 20px 30px;
-  position: relative;
-  margin: auto;
-  height: 350px;
-  width: 450px;
-}
-
 .figure-container {
+  margin-top: 10rem;
   fill: transparent;
   stroke: #fff;
   stroke-width: 4px;
@@ -37,29 +25,10 @@ h1 {
   display: none;
 }
 
-.wrong-letters-container {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  display: flex;
-  flex-direction: column;
-  text-align: right;
-}
-
-.wrong-letters-container p {
-  margin: 0 0 5px;
-}
-
-.wrong-letters-container span {
-  font-size: 24px;
-}
 
 .word {
-  display: flex;
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
+  margin: auto;
+  margin-bottom: 15rem;
 }
 
 .letter {
