--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   background-color: #34495e!important;
   color: #fff!important;
@@ -14,7 +10,6 @@ h1 {
 }
 
 .figure-container {
-  margin-top: 10rem;
   fill: transparent;
   stroke: #fff;
   stroke-width: 4px;
@@ -23,12 +18,6 @@ h1 {
 
 .figure-part {
   display: none;
-}
-
-
-.word {
-  margin: auto;
-  margin-bottom: 15rem;
 }
 
 .letter {
@@ -40,6 +29,10 @@ h1 {
   margin: 0 3px;
   height: 50px;
   width: 20px;
+}
+
+.guesser-container {
+  white-space: nowrap;
 }
 
 .popup-container {
